# perisso

./: .editorconfig  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: release.yml
examples/: classes.py  examples.py
src/perisso/: __init__.py  collection.py  connection.py  core.py  enums.py  guid.py  helper.py  tapir_commands.py  type_utils.py  types.py  utils.py  vector.py
